--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -365,6 +365,9 @@
     .colorful-kicks-section .container .left-container {
            text-align: center;
     }
+    .colorful-kicks-section .container .right {
+           display: none;
+    }
   }
   @media (min-width: 992px) {
     .product-image-wrapper .bg-text {
