--- a/sections/performance-banner.liquid
+++ b/sections/performance-banner.liquid
@@ -45,6 +45,14 @@
       .performance-banner .text-content {
               padding-inline: 1.5rem;
             }
+             .performance-banner .image-content {
+                display: none;
+             }
+             }
+            .performance-banner .text-content .text-container {
+                text-align: center;
+                margin: auto;
+            }
   }
    @media(min-width:  768px) {
     .performance-banner .text-content {
