--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -575,7 +575,7 @@
                                                                                 {%- else -%}
                                                                                     {% assign quick_add = 'none' %}
                                                                                 {%- endif -%}
-                                                                                {% render 'card-product',
+                                                                                {% render 'cstm-card-product',
                                                                                         card_product: product,
                                                                                         media_aspect_ratio: block.settings.image_ratio,
                                                                                         show_secondary_image: false,
