--- a/snippets/cstm-article-card.liquid
+++ b/snippets/cstm-article-card.liquid
@@ -13,7 +13,7 @@
   - lazy_load: {Boolean} Image should be lazy loaded. Default: true (optional)
 
   Usage:
-  {% render 'article-card' blog: blog, article: article, show_image: section.settings.show_image %}
+  {% render 'cstm-article-card' blog: blog, article: article, show_image: section.settings.show_image %}
 {% endcomment %}
 
 {%- if article and article != empty -%}
