--- a/snippets/cstm-card-collection.liquid
+++ b/snippets/cstm-card-collection.liquid
@@ -10,7 +10,7 @@
   - placeholder_image: {String} Placeholder image when collection is empty (optional)
 
   Usage:
-  {% render 'card-collection' %}
+  {% render 'cstm-card-collection' %}
 {% endcomment %}
 
 {%- liquid
