--- a/snippets/cstm-cart-drawer.liquid
+++ b/snippets/cstm-cart-drawer.liquid
@@ -2,7 +2,7 @@
   Renders cart drawer
 
   Usage:
-  {% render 'cart-drawer' %}
+  {% render 'cstm-cart-drawer' %}
 {% endcomment %}
 
 {{ 'quantity-popover.css' | asset_url | stylesheet_tag }}
@@ -56,7 +56,7 @@
           </div>
           {%- if settings.cart_drawer_collection != blank -%}
             <div class="cart-drawer__collection">
-              {% render 'card-collection', card_collection: settings.cart_drawer_collection, columns: 1 %}
+              {% render 'cstm-card-collection', card_collection: settings.cart_drawer_collection, columns: 1 %}
             </div>
           {%- endif -%}
         </div>
