--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -15,7 +15,7 @@
     .overflow-menu{
     overflow: hidden;
     }
-    
+
 
 {% endstyle %}
 
@@ -95,7 +95,9 @@
                                                                         {% endstyle %}
                                                                         <img src="{{ image_url }}"
                                                                              alt="{{ grandchildlink.title | escape }}"
-                                                                             class="mega-menu__image" />
+                                                                             class="mega-menu__image" width="50px"
+                                                                             loading="lazy"
+                                                                             height="50px" />
                                                                     {% endif %}
 
 
