--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -275,7 +275,7 @@
                         %}
                         {%- assign skip_card_product_styles = true -%}
                       {%- when 'article' -%}
-                        {% render 'article-card',
+                        {% render 'cstm-article-card',
                           article: item,
                           show_image: true,
                           show_date: section.settings.article_show_date,
