--- a/snippets/cstm-header-search.liquid
+++ b/snippets/cstm-header-search.liquid
@@ -6,7 +6,7 @@ Renders a header search modal. Should be used with 'cstm-header.liquid'
   - input_id: {String} Id for the search input element (required)
 
   Usage:
-  {% render 'header-search', input_id: 'My-Id'%}
+  {% render 'cstm-header-search', input_id: 'My-Id'%}
 {% endcomment %}
 
 <details-modal class="header__search">
