--- a/snippets/heading-text.liquid
+++ b/snippets/heading-text.liquid
@@ -40,31 +40,31 @@
     <div class="image-slider">
       <div class="first-image-container image image-container">
      {% if section.settings.introduction_image_1 != blank %}
-  <img src="{{ section.settings.introduction_image_1 | image_url }}" alt="Image 1">
+     <img src="{{ section.settings.introduction_image_1 | image_url: width: 400 }}" alt="Image 1" width="400" height="300" loading="lazy">
 {% else %}
-  <img src="{{ 'placeholder.png' | asset_url }}" alt="Default Image">
+     <img src="{{ 'placeholder.png' | asset_url }}" alt="Default Image" width="400" height="300" loading="lazy">
 {% endif %}
 
       </div>
       <div class="second-image-container image image-container">
          {% if section.settings.introduction_image_2 != blank %}
-  <img src="{{ section.settings.introduction_image_2 | image_url }}" alt="Image 1">
+  <img src="{{ section.settings.introduction_image_2 | image_url: width: 400 }}" alt="Image 2" width="400" height="300" loading="lazy">
 {% else %}
-  <img src="{{ 'placeholder.png' | asset_url }}" alt="Default Image">
+  <img src="{{ 'placeholder.png' | asset_url }}" alt="Default Image" width="400" height="300" loading="lazy">
 {% endif %}
       </div>
       <div class="third-image-container image image-container">
          {% if section.settings.introduction_image_3 != blank %}
-  <img src="{{ section.settings.introduction_image_3 | image_url }}" alt="Image 1">
+  <img src="{{ section.settings.introduction_image_3 | image_url: width: 400 }}" alt="Image 3" width="400" height="300" loading="lazy">
 {% else %}
-  <img src="{{ 'placeholder.png' | asset_url }}" alt="Default Image">
+  <img src="{{ 'placeholder.png' | asset_url }}" alt="Default Image" width="400" height="300" loading="lazy">
 {% endif %}
       </div>
       <div class="fourth-image-container image image-container">
          {% if section.settings.introduction_image_4 != blank %}
-  <img src="{{ section.settings.introduction_image_4 | image_url }}" alt="Image 1">
+  <img src="{{ section.settings.introduction_image_4 | image_url: width: 400 }}" alt="Image 4" width="400" height="300" loading="lazy">
 {% else %}
-  <img src="{{ 'placeholder.png' | asset_url }}" alt="Default Image">
+  <img src="{{ 'placeholder.png' | asset_url }}" alt="Default Image" width="400" height="300" loading="lazy">
 {% endif %}
       </div>
     </div>
