--- a/snippets/icon-with-text.liquid
+++ b/snippets/icon-with-text.liquid
@@ -11,36 +11,36 @@
   %}
 {% endcomment %}
 {%- liquid
-  assign heading_1_empty = false
-  assign heading_2_empty = false
-  assign heading_3_empty = false
-  assign text_only_all_items = true
+  assign heading1Empty = false
+  assign heading2Empty = false
+  assign heading3Empty = false
+  assign textOnlyAllItems = true
 
   if block.settings.heading_1 == empty
-    assign heading_1_empty = true
+    assign heading1Empty = true
   endif
 
   if block.settings.heading_2 == empty
-    assign heading_2_empty = true
+    assign heading2Empty = true
   endif
 
   if block.settings.heading_3 == empty
-    assign heading_3_empty = true
+    assign heading3Empty = true
   endif
 
-  if heading_1_empty == false and block.settings.icon_1 != 'none' or block.settings.image_1 != null
-    assign text_only_all_items = false
-  elsif heading_2_empty == false and block.settings.icon_2 != 'none' or block.settings.image_2 != null
-    assign text_only_all_items = false
-  elsif heading_3_empty == false and block.settings.icon_3 != 'none' or block.settings.image_3 != null
-    assign text_only_all_items = false
+  if heading1Empty == false and block.settings.icon_1 != 'none' or block.settings.image_1 != null
+    assign textOnlyAllItems = false
+  elsif heading2Empty == false and block.settings.icon_2 != 'none' or block.settings.image_2 != null
+    assign textOnlyAllItems = false
+  elsif heading3Empty == false and block.settings.icon_3 != 'none' or block.settings.image_3 != null
+    assign textOnlyAllItems = false
   endif
 -%}
 <ul
-  class="icon-with-text icon-with-text--{{ block.settings.layout }} list-unstyled{% if text_only_all_items %} icon-with-text--text-only{% endif %}"
+  class="icon-with-text icon-with-text--{{ block.settings.layout }} list-unstyled{% if textOnlyAllItems %} icon-with-text--text-only{% endif %}"
   {{ block.shopify_attributes }}
 >
-  {%- unless heading_1_empty -%}
+  {%- unless heading1Empty -%}
     <li class="icon-with-text__item">
       {%- if block.settings.image_1 == null -%}
         {%- render 'icon-accordion', icon: block.settings.icon_1 -%}
@@ -62,7 +62,7 @@
       </span>
     </li>
   {%- endunless -%}
-  {%- unless heading_2_empty -%}
+  {%- unless heading2Empty -%}
     <li class="icon-with-text__item">
       {%- if block.settings.image_2 == null -%}
         {% render 'icon-accordion', icon: block.settings.icon_2 -%}
@@ -84,7 +84,7 @@
       </span>
     </li>
   {%- endunless -%}
-  {%- unless heading_3_empty -%}
+  {%- unless heading3Empty -%}
     <li class="icon-with-text__item">
       {%- if block.settings.image_3 == null -%}
         {% render 'icon-accordion', icon: block.settings.icon_3 -%}
