--- a/sections/colorful-kick.liquid
+++ b/sections/colorful-kick.liquid
@@ -164,7 +164,7 @@
                       {% if section.settings.only_desktop and section.settings.show_product_info %}
                         <div class="product-image-info" data-product-id="{{ product.id }}">
                           <div class="img-wrap">
-                            <img src="{{ product.featured_image | image_url: width: 200,height:200 }}" alt="img-{{ product.title }}">
+                            <img src="{{ product.featured_image | image_url: width: 200, height: 200, format: 'webp' }}" alt="img-{{ product.title }}" width="200" height="200" loading="lazy">
                           </div>
                           <h4>{{ product.title }}</h4>
                           <div>
@@ -176,7 +176,7 @@
                      <div class="product-image-wrapper-img">
                        <img
                                class="collection-image"
-                               src="{{ product.featured_image | image_url: width: 450,height:450 }}"
+                               src="{{ product.featured_image | image_url: width: 450, height: 450, format: 'webp' }}"
                                alt="{{ product.title }}"
                                width="600"
                                height="600"
@@ -199,7 +199,7 @@
 
       <div class="right">
         {% if section.settings.lifestyle_image %}
-          <img src="{{ section.settings.lifestyle_image | img_url: 'master' }}" alt="Lifestyle">
+          <img src="{{ section.settings.lifestyle_image | image_url: width: 800, format: 'webp' }}" alt="Lifestyle" width="800" height="600" loading="lazy">
         {% endif %}
       </div>
     </div>
