--- a/sections/cstm-footer.liquid
+++ b/sections/cstm-footer.liquid
@@ -480,6 +480,9 @@
                                                         {%- endif -%}
                                                     </div>
                                             {%- endcase -%}
+                                            {%- if block.settings.heading != blank -%}
+                                        </details>
+                                            {%- endif -%}
                                     </div>
                                 {%- endfor -%}
                             </div>
