--- a/snippets/product-variant-custom.liquid
+++ b/snippets/product-variant-custom.liquid
@@ -205,46 +205,36 @@
 
         {% for value in option.values limit: section.settings.swatches_limits %}
           {% liquid
-            assign swatch_focal = null
+            if value.available
+              assign option_disabled = false
+            else
+              assign option_disabled = true
+            endif
+            
+            assign swatch_focal_point = value.swatch.image.presentation.focal_point
+            assign image_url = value.swatch.image | image_url: width: 50
             if value.swatch.image
-              assign image_url = value.swatch.image | image_url: width: 50
               assign swatch_value = 'url(' | append: image_url | append: ')'
-              assign swatch_focal_point = value.swatch.image.presentation.focal_point
             elsif value.swatch.color
               assign swatch_value = 'rgb(' | append: value.swatch.color.rgb | append: ')'
             else
               assign swatch_value = null
             endif
-
-            assign option_disabled = true
-            if value.available
-              assign option_disabled = false
-            endif
+            
           %}
 
-          {%- capture input_id -%}
-                        {{ section.id }}-{{ product.id }}-{{ option.position }}-{{- forloop.index0 -}}
-                    {% endcapture %}
-          {%- capture input_name -%}
-                        {{ product.id }}-{{ option.name }}-{{ option.position }}
-                    {%- endcapture -%}
+          {% capture label_unavailable %}<span class="visually-hidden label-unavailable">{{ 'products.product.variant_sold_out_or_unavailable' | t }}</span>{% endcapture %}
+          
+          {% capture help_text %}<span class="visually-hidden">{{ value | escape }}</span>{{ label_unavailable }}{% endcapture %}
+          
+          {% capture input_id %}{{ section.id }}-{{ product.id }}-{{ option.position }}-{{ forloop.index0 }}{% endcapture %}
+          
+          {% capture input_name %}{{ product.id }}-{{ option.name }}-{{ option.position }}{% endcapture %}
+          
+          {% capture input_dataset %}data-product-url="{{ value.product_url }}" data-option-value-id="{{ value.id }}" data-product-id="{{ product.id }}"{% endcapture %}
 
-          {%- capture input_dataset -%}
-                        data-product-url="{{ value.product_url }}"
-                        data-option-value-id="{{ value.id }}"
-                        data-product-id="{{ product.id }}"
-                    {% endcapture %}
-
-          {% capture label_unavailable %}
-                        <span class="visually-hidden label-unavailable">
-                            {{- 'products.product.variant_sold_out_or_unavailable' | t -}}
-                        </span>
-                    {% endcapture %}
-
-          {%- capture help_text -%}
-                        <span class="visually-hidden">{{ value | escape }}</span>
-                        {{ label_unavailable }}
-                    {% endcapture %}
+          {% liquid
+          %}
 
           {%
             render 'swatch-input',
@@ -252,11 +242,10 @@
             name: input_name,
             value: value | escape,
             swatch: value.swatch,
-            product_form_id: product_form_id,
             checked: value.selected,
-            visually_disabled: option_disabled,
             shape: block.settings.swatch_shape,
             help_text: help_text,
+            visually_disabled: option_disabled,
             additional_props: input_dataset
           %}
         {% endfor %}
