--- a/sections/main-login.liquid
+++ b/sections/main-login.liquid
@@ -1,6 +1,7 @@
 {{ 'customer.css' | asset_url | stylesheet_tag }}
 {{ 'login-styles.css' | asset_url | stylesheet_tag }}
-{{ 'login-password-toggle.js' | asset_url | script_tag }}
+
+<script src="{{ 'login-password-toggle.js' | asset_url }}" defer></script>
 
 {%- style -%}
     .section-{{ section.id }}-padding {
@@ -200,46 +201,47 @@
             {%- endif -%}
         </div>
     </div>
-    {% schema %}
+</div>
+{% schema %}
+{
+  "name": "t:sections.main-login.name",
+  "settings": [
     {
-      "name": "t:sections.main-login.name",
-      "settings": [
-        {
-          "type": "checkbox",
-          "id": "enable_shop_login_button",
-          "label": "t:sections.main-login.shop_login_button.enable",
-          "default": true
-        },
-        {
-          "type": "header",
-          "content": "t:sections.all.padding.section_padding_heading"
-        },
-        {
-          "type": "range",
-          "id": "padding_top",
-          "min": 0,
-          "max": 100,
-          "step": 4,
-          "unit": "px",
-          "label": "t:sections.all.padding.padding_top",
-          "default": 36
-        },
-        {
-          "type": "range",
-          "id": "padding_bottom",
-          "min": 0,
-          "max": 100,
-          "step": 4,
-          "unit": "px",
-          "label": "t:sections.all.padding.padding_bottom",
-          "default": 36
-        },
-        {
-          "type": "text",
-          "id": "custom_text",
-          "label": "Enter your custom text",
-          "default": "Welcome to our store!"
-        }
-      ]
+      "type": "checkbox",
+      "id": "enable_shop_login_button",
+      "label": "t:sections.main-login.shop_login_button.enable",
+      "default": true
+    },
+    {
+      "type": "header",
+      "content": "t:sections.all.padding.section_padding_heading"
+    },
+    {
+      "type": "range",
+      "id": "padding_top",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "t:sections.all.padding.padding_top",
+      "default": 36
+    },
+    {
+      "type": "range",
+      "id": "padding_bottom",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "t:sections.all.padding.padding_bottom",
+      "default": 36
+    },
+    {
+      "type": "text",
+      "id": "custom_text",
+      "label": "Enter your custom text",
+      "default": "Welcome to our store!"
     }
-    {% endschema %}
+  ]
+}
+{% endschema %}
