--- a/sections/product-tab.liquid
+++ b/sections/product-tab.liquid
@@ -1,5 +1,16 @@
 {{ 'home-page-product.css' | asset_url | stylesheet_tag }}
-{{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
+{% comment %} Load Swiper CSS only when needed {% endcomment %}
+{% assign has_products = false %}
+{% for block in section.blocks %}
+  {% assign collection = collections[block.settings.collection] %}
+  {% if collection.products.size > 1 %}
+    {% assign has_products = true %}
+    {% break %}
+  {% endif %}
+{% endfor %}
+{% if has_products %}
+  {{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
+{% endif %}
 {% schema %}
 {
   "name": "Product Tabs",
@@ -76,8 +87,12 @@
                     <div class="pua-tab-content test {% if forloop.first %}active{% endif %}"
                          id="tab-tab-{{ forloop.index }}">
                         {% assign collection = collections[block.settings.collection] %}
-                        {% if collection.products.size > 0 %}
-                            <script src="{{ 'swiper-bundle.min.js' | asset_url }}" defer></script>
+                        {% if collection.products.size > 1 %}
+                            {% comment %} Load Swiper JS only for first occurrence {% endcomment %}
+                            {% unless swiper_loaded %}
+                                <script src="{{ 'swiper-bundle.min.js' | asset_url }}" defer></script>
+                                {% assign swiper_loaded = true %}
+                            {% endunless %}
 
                             <div class="pua-product-slider swiper" data-product-count="{{ collection.products.size }}">
                                 <div class="swiper-wrapper">
@@ -87,7 +102,7 @@
                                                 <a href="{{ product.url }}" itemprop="url" class="product-card-link">
                                                     <img
                                                             class="main-image"
-                                                            src="{{ product.featured_image | image_url: width: 400, height: 400 }}"
+                                                            src="{{ product.featured_image | image_url: width: 400, height: 400, format: 'webp' }}"
                                                             alt="{{ product.title }}"
                                                             itemprop="image"
                                                             loading="lazy"
@@ -100,7 +115,7 @@
                                                         <div class="thumbnail-image-wrapper">
                                                             <img
                                                                     class="thumbnail"
-                                                                    src="{{ image | image_url: width: 400, height: 400 }}"
+                                                                    src="{{ image | image_url: width: 400, height: 400, format: 'webp' }}"
                                                                     alt="{{ product.title }} thumbnail"
                                                                     onclick="this.closest('.product-card').querySelector('.main-image').src = this.src"
                                                                     width="50px" height="50px"
