--- a/sections/recommended-products.liquid
+++ b/sections/recommended-products.liquid
@@ -67,7 +67,7 @@
                             <div class="{% if section.blocks.size > 1 %}swiper-slide{% else %}recommended-item{% endif %}">
                                 <div class="product-card">
                                     <a href="{{ product.url }}" class="product-card-link">
-                                        <img src="{{ product.featured_image | image_url: width: 400, height: 400 }}"
+                                        <img src="{{ product.featured_image | image_url: width: 400, height: 400, format: 'webp' }}"
                                              class="main-image" loading="lazy"
                                              alt="{{ product.title }}" width="400" height="400">
                                     </a>
@@ -76,7 +76,7 @@
                                             <div class="thumbnail-image-wrapper">
                                                 <img
                                                         class="thumbnail"
-                                                        src="{{ image | image_url: width: 400, height: 400 }}"
+                                                        src="{{ image | image_url: width: 400, height: 400, format: 'webp' }}"
                                                         alt="{{ product.title }} thumbnail"
                                                         onclick="this.closest('.product-card').querySelector('.main-image').src = this.src"
                                                         width="50px" height="50px"
