--- a/snippets/back-to-the-top.liquid
+++ b/snippets/back-to-the-top.liquid
@@ -17,7 +17,7 @@
     .back-to-top {
         display: block !important;
         position: fixed;
-        bottom: 61px;
+        bottom: {{ position_from_bottom }};
         right: 15px;
         z-index: 10;
         background-color: #836851;
