--- a/sections/cstm-announcement-bar.liquid
+++ b/sections/cstm-announcement-bar.liquid
@@ -1,4 +1,5 @@
-{{ 'component-slideshow.css' | asset_url | stylesheet_tag }}
+<link rel="preload" href="{{ 'component-slideshow.css' | asset_url }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
 {{ 'component-slider.css' | asset_url | stylesheet_tag }}
 {%- liquid
   assign social_icons = true
