--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -186,7 +186,9 @@
     {%- endunless -%}
 
     {{ 'section-password.css' | asset_url | stylesheet_tag }}
-    {{ 'base.css' | asset_url | stylesheet_tag }}
+
+    <link rel="preload" href="{{ 'base.css' | asset_url }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
     {{ 'component-list-social.css' | asset_url | stylesheet_tag }}
 
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
